--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,7 @@
 android.useAndroidX=true
 org.gradle.jvmargs=-Xms256m -Xmx4096m
+
+systemProp.https.proxyHost=proxy
+systemProp.https.proxyPort=3128
+systemProp.http.proxyHost=proxy
+systemProp.http.proxyPort=3128
